--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "parallelDist"]
+	path = parallelDist
+	url = https://github.com/alexeckert/paralleldist
+	shallow = true
+	registered = true
